[package]
authors = ["Michael Mroz"]
categories = ["wasm"]
description = "He brings the light"
name = "lucifer"
readme = "./README.md"
repository = "https://github.com/mirichan/lucifer"
version = "0.0.1"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
derive_more = "0.99.16"
wasm-bindgen = "0.2.77"
rayon = "1.5.1"
wasm-bindgen-rayon = "1.0.3"
js-sys = { version = "0.3.53" }
web-sys = { version = "0.3.53", features = ["console"] } #latest 2020-11-20

[features]

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
# wasm-opt = ["-Oz", "--enable-mutable-globals"]
wasm-opt = false
