[package]
edition = "2018"
name = "lucifer-ui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.55"
lucifer = {path = "../compute"}
wasm-bindgen = "0.2.78"
web-sys = {version = "0.3.55", features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
]}
yew = "0.18"
yew-router = "0.15.0"
yewprint = {git = "https://github.com/cecton/yewprint.git", branch = "main"}
